nav childen space too big fix

--- a/style.css
+++ b/style.css
@@ -480,6 +480,7 @@ section div p {
     padding: 0 4%;
     width: 40%;
     height: 100%;
+    justify-content: space-evenly;
     transition: all 0.5s ease-in-out;
     transform: translateX(-100%);
     z-index: 100;
